kubernetes/homebridge/homebridge.StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homebridge
  namespace: homebridge
spec:
  serviceName: homebridge
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      containers:
      - name: homebridge
        image: homebridge/homebridge:2025-05-27
        ports:
        - containerPort: 8581
          name: web-ui
        - containerPort: 51826
          name: homekit
        volumeMounts:
        - name: homebridge-data
          mountPath: /homebridge
        resources: {}
      hostNetwork: true
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: homebridge-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 1Gi
