kubernetes/homebridge/homebridge.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge
  namespace: homebridge
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homebridge
      port:
        name: http
  tls:
  - hosts:
    - homebridge
